change/room Entity